--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "file-diff",
 	"version": "0.1.0",
-	"main": "main.js"
+	"main": "main.js",
+	"devDependencies": {
+		"@electron-forge/cli": "^6.2.1"
+	}
 }
